Fix SQL Server tests

--- a/test-dbs/testkit.github-actions.conf
+++ b/test-dbs/testkit.github-actions.conf
@@ -110,9 +110,9 @@ oracle {
   drop = null
 }
 
-sqlserver2017-jtds {
+sqlserver-jtds {
   enabled = true
-  baseURL = "jdbc:jtds:sqlserver://localhost:1401;instanceName=SQL2017;loginTimeout=120;DatabaseName="
+  baseURL = "jdbc:jtds:sqlserver://localhost:1401;instanceName=SQL;loginTimeout=120;DatabaseName="
   user = sa
   password = "Freeslick18"
   testDB = slicktest
@@ -128,12 +128,15 @@ sqlserver2017-jtds {
     "exec sp_MSforeachtable 'drop table ?'"
 
   ]
+  drop = [
+    use ${adminDB}
+  ]
   driver = net.sourceforge.jtds.jdbc.Driver
 }
 
-sqlserver2017-sqljdbc {
+sqlserver-sqljdbc {
   enabled = true
-  baseURL = "jdbc:sqlserver://localhost:1401;instanceName=SQL2017;loginTimeout=120;DatabaseName="
+  baseURL = "jdbc:sqlserver://localhost:1401;instanceName=SQL;loginTimeout=120;DatabaseName="
   user = sa
   password = "Freeslick18"
   testDB = slicktest
