--- a/slick-testkit/src/main/resources/testkit-reference.conf
+++ b/slick-testkit/src/main/resources/testkit-reference.conf
@@ -4,7 +4,7 @@
 
 testkit {
   # Use only the following DBs (or use all if not set)
-  #testDBs = [h2mem, h2rownum, h2disk, hsqldbmem, hsqldbdisk, sqlitemem, sqlitedisk, derbymem, derbydisk, postgres, mysql, oracle, db2, sqlserver-jtds, sqlserver-jdbc, access, heap]
+  #testDBs = [h2mem, h2rownum, h2disk, hsqldbmem, hsqldbdisk, sqlitemem, sqlitedisk, derbymem, derbydisk, postgres, mysql, oracle, db2, sqlserver-jdbc, access, heap]
   testDBs = null
 
   # Store database files in this path (ignored by MySQL and in-memory databases)
@@ -163,20 +163,6 @@ db2 {
   adminConn.url = ${baseURL}
   user = db2admin
   driver = "com.ibm.db2.jcc.DB2Driver"
-}
-
-sqlserver-jtds {
-  baseURL = "jdbc:jtds:sqlserver://localhost/"
-  domain = local
-  urlSuffix = ";progName=Slick_TestKit;namedPipe=true;domain="${domain}
-  testConn.url = ${baseURL}${testDB}${urlSuffix}
-  adminConn.url = ${baseURL}${adminDB}${urlSuffix}
-  user = dbo
-  adminDB = master
-  defaultSchema = dbo
-  create = "CREATE DATABASE \""${testDB}"\" ON (NAME = '[DB]_dat', FILENAME = '"${testkit.absTestDir}"\\\\"${testDB}".mdf') LOG ON (NAME = '"${testDB}"_log', FILENAME = \""${testkit.absTestDir}"\\\\"${testDB}".ldf\")"
-  drop = "IF EXISTS(SELECT name FROM sys.databases WHERE name = '"${testDB}"') DROP DATABASE \""${testDB}"\""
-  driver = net.sourceforge.jtds.jdbc.Driver
 }
 
 sqlserver-sqljdbc {
