added generic databricks config

--- a/doc/code/application.conf
+++ b/doc/code/application.conf
@@ -62,3 +62,16 @@ altDatabaseUrl {
   }
 }
 //#altdburl
+
+//#databricks_db
+databricks_db {
+  profile = "db.MyProfile$"
+  db {
+    driver = "com.databricks.client.jdbc.Driver"
+    url = "jdbc:databricks://DATABRICKS_HOST:443;HttpPath=/sql/1.0/endpoints/XXXXXXXXX;TransportMode=http;SSL=1"
+    PWD = "????????????"
+    UID = "token"
+    AuthMech = "3"
+  }
+}
+//#databricks_db
