update profile package

--- a/doc/code/application.conf
+++ b/doc/code/application.conf
@@ -65,7 +65,7 @@ altDatabaseUrl {
 
 //#databricks_db
 databricks_db {
-  profile = "db.MyProfile$"
+  profile = "com.typesafe.slick.docs.GenericJdbcProfile$"
   db {
     driver = "com.databricks.client.jdbc.Driver"
     url = "jdbc:databricks://DATABRICKS_HOST:443;HttpPath=/sql/1.0/endpoints/XXXXXXXXX;TransportMode=http;SSL=1"
