Use scala version wildcards for ci.yml matrix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       matrix:
         java: [ 11, 17 ]
-        scala: [ 2.12.17, 2.13.8 ]
+        scala: [ 2.12.x, 2.13.x ]
 
     services:
       postgres:
