--- a/.mergify.yml
+++ b/.mergify.yml
@@ -17,10 +17,10 @@ pull_request_rules:
 
   - name: Automatic merge on approval
     conditions:
-      - "check-success=Build and Test (11, 2.12.17)"
-      - "check-success=Build and Test (11, 2.13.8)"
-      - "check-success=Build and Test (17, 2.12.17)"
-      - "check-success=Build and Test (17, 2.13.8)"
+      - "check-success=Build and Test (11, 2.12.x)"
+      - "check-success=Build and Test (11, 2.13.x)"
+      - "check-success=Build and Test (17, 2.12.x)"
+      - "check-success=Build and Test (17, 2.13.x)"
       - "#changes-requested-reviews-by=0"
       - or:
           - "#approved-reviews-by>=1"
