pr-compat-report-generate.yml: give up on piping and do the writing within SBT

--- a/.github/workflows/pr-compat-report-generate.yml
+++ b/.github/workflows/pr-compat-report-generate.yml
@@ -24,10 +24,10 @@ jobs:
 
     - name: Get base version
       id: getBaseVer
-      run: echo baseVer=$(sbt -no-colors -error "print slick/version") | tee -a $GITHUB_OUTPUT
+      run: sbt writeVersionToGitHubOutput
 
     - run: sbt publishLocal
-      name: Publish ${{ steps.getBaseVer.outputs.baseVer }} locally
+      name: Publish ${{ steps.getBaseVer.outputs.result }} locally
 
     - uses: actions/checkout@v3
       name: Check out PR
@@ -40,20 +40,17 @@ jobs:
     - name: Generate compatibility changes report
       id: createReport
       run: |
-        echo -n "reportFile=" | tee -a $GITHUB_OUTPUT
         sbt \
-          -no-colors -error \
-          'set every CompatReportPlugin.previousRelease := Some("${{ steps.getBaseVer.outputs.baseVer }}")' \
-          'print site/buildCompatReport' \
-          | tee -a $GITHUB_OUTPUT
+          'set every CompatReportPlugin.previousRelease := Some("${{ steps.getBaseVer.outputs.result }}")' \
+          writeCompatReportToGitHubOutput
 
-    - name: Show report saved in ${{ steps.createReport.outputs.reportFile }}
-      run: cat ${{ steps.createReport.outputs.reportFile }}
+    - name: Show report saved in ${{ steps.createReport.outputs.result }}
+      run: cat ${{ steps.createReport.outputs.result }}
 
     - name: Prepare artifact contents
       run: |
         mkdir -p ./compat-report
-        cp ${{ steps.createReport.outputs.reportFile }} ./compat-report/compat-report.md
+        cp ${{ steps.createReport.outputs.result }} ./compat-report/compat-report.md
         echo ${{ github.event.number }} > ./compat-report/NR.txt
 
     - uses: actions/upload-artifact@v3
