--- a/slick-testkit/src/main/resources/testkit-reference.conf
+++ b/slick-testkit/src/main/resources/testkit-reference.conf
@@ -149,21 +149,26 @@ oracle {
     "begin execute immediate 'drop user "${testConn.user}" cascade'; exception when others then if sqlcode != -1918 then raise; end if; end;"
     "begin execute immediate 'drop tablespace "${testConn.user}"_TS including contents and datafiles cascade constraints'; exception when others then if sqlcode != -959 then raise; end if; end;"
   ]
-  testClasses = ${testkit.testClasses} [
+
+  testClasses = [
+    ${testkit.testPackage}.ActionTest
+    ${testkit.testPackage}.AggregateTest
+    ${testkit.testPackage}.CountTest
+    ${testkit.testPackage}.RelationalTypeTest
     ${testkit.testPackage}.OracleExtraTests
     ${testkit.testPackage}.OptionBooleanTest
   ]
 }
 
-db2 {
-  testDB = SLICKTST
-  schema = SLICK_TEST
-  baseURL = "jdbc:db2://localhost:50000/"${testDB}":currentSchema="${schema}";"
-  testConn.url = ${baseURL}
-  adminConn.url = ${baseURL}
-  user = db2admin
-  driver = "com.ibm.db2.jcc.DB2Driver"
-}
+# db2 {
+#   testDB = SLICKTST
+#   schema = SLICK_TEST
+#   baseURL = "jdbc:db2://localhost:50000/"${testDB}":currentSchema="${schema}";"
+#   testConn.url = ${baseURL}
+#   adminConn.url = ${baseURL}
+#   user = db2admin
+#   driver = "com.ibm.db2.jcc.DB2Driver"
+# }
 
 sqlserver-sqljdbc {
   baseURL = "jdbc:sqlserver://localhost;database="
