--- a/test-dbs/testkit.github-actions.conf
+++ b/test-dbs/testkit.github-actions.conf
@@ -23,40 +23,40 @@ postgres {
   password = postgres
 }
 
-db2 {
-  enabled = true
-  user = db2inst1
-  schema = "SLICK_TEST"
-  password = db2inst1-pwd
-  testDB = "SLICKTST"
-  adminConn {
-    user = ${user}
-    password = ${password}
-    tableTableSpace = "SLICK_DATA"
-    indexTableSpace = "SLICK_INDEX"
-  }
-  create = [
-      """
-      begin
-        declare tsCount int default 0;
-        select count(*) into tsCount from SYSIBMADM."USER_TABLESPACES" where tablespace_name = '"""${adminConn.tableTableSpace}"""';
-        if (tsCount = 0) then
-          execute immediate 'create tablespace """${adminConn.tableTableSpace}""" managed by database using (file ''./dbdata/"""${adminConn.tableTableSpace}""".dat'' 10M)';
-          execute immediate 'create tablespace """${adminConn.indexTableSpace}""" managed by database using (file ''./dbdata/"""${adminConn.indexTableSpace}""".dat'' 10M)';
-          grant use of tablespace """${adminConn.tableTableSpace}""" to """${user}""" with grant option
-          grant use of tablespace """${adminConn.indexTableSpace}""" to """${user}""" with grant option
-        end if;
-        for v_row as (select 'drop table "' || table_schema || '"."' || table_name || '"' as NAME from sysibm.tables where table_schema = 'DB2INST1')
-        do
-         execute immediate v_row.NAME;
-        end for;
-        for v_seq as (select 'drop sequence "' || seqname || '"' as NAME from syscat.sequences where seqschema = 'DB2INST1')
-        do
-         execute immediate v_seq.NAME;
-        end for;
-      end"""
-    ]
-}
+# db2 {
+#   enabled = true
+#   user = db2inst1
+#   schema = "SLICK_TEST"
+#   password = db2inst1-pwd
+#   testDB = "SLICKTST"
+#   adminConn {
+#     user = ${user}
+#     password = ${password}
+#     tableTableSpace = "SLICK_DATA"
+#     indexTableSpace = "SLICK_INDEX"
+#   }
+#   create = [
+#       """
+#       begin
+#         declare tsCount int default 0;
+#         select count(*) into tsCount from SYSIBMADM."USER_TABLESPACES" where tablespace_name = '"""${adminConn.tableTableSpace}"""';
+#         if (tsCount = 0) then
+#           execute immediate 'create tablespace """${adminConn.tableTableSpace}""" managed by database using (file ''./dbdata/"""${adminConn.tableTableSpace}""".dat'' 10M)';
+#           execute immediate 'create tablespace """${adminConn.indexTableSpace}""" managed by database using (file ''./dbdata/"""${adminConn.indexTableSpace}""".dat'' 10M)';
+#           grant use of tablespace """${adminConn.tableTableSpace}""" to """${user}""" with grant option
+#           grant use of tablespace """${adminConn.indexTableSpace}""" to """${user}""" with grant option
+#         end if;
+#         for v_row as (select 'drop table "' || table_schema || '"."' || table_name || '"' as NAME from sysibm.tables where table_schema = 'DB2INST1')
+#         do
+#          execute immediate v_row.NAME;
+#         end for;
+#         for v_seq as (select 'drop sequence "' || seqname || '"' as NAME from syscat.sequences where seqschema = 'DB2INST1')
+#         do
+#          execute immediate v_seq.NAME;
+#         end for;
+#       end"""
+#     ]
+# }
 
 oracle {
   enabled = true
@@ -80,7 +80,7 @@ oracle {
     password = ${testConn.user}
     keepAliveConnection=true
     connectionPool=HikariCP
-    connectionTimeout=600000
+    connectionTimeout=60000
     idleTimeout=60000
     numThreads=15
   }
